[gd_scene load_steps=5 format=3 uid="uid://eftgu3yxm55t"]

[ext_resource type="Script" uid="uid://ex7dot2nyvco" path="res://project/scripts/buy.gd" id="1_yx2u7"]
[ext_resource type="PackedScene" uid="uid://b45fc31iym480" path="res://project/scenes/interactable.tscn" id="2_p2jja"]
[ext_resource type="Texture2D" uid="uid://bao0nyq1u1rl7" path="res://project/art/sprites/objects/buy-portal.png" id="3_i70x3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2jja"]

[node name="Buy" type="Node2D"]
script = ExtResource("1_yx2u7")

[node name="InteractableBuy" parent="." instance=ExtResource("2_p2jja")]
interaction_name = "E om het volgende level te kopen"

[node name="Sprite2D" type="Sprite2D" parent="InteractableBuy"]
texture_filter = 1
position = Vector2(1.19209e-07, -3.57628e-07)
scale = Vector2(0.609376, 0.61805)
texture = ExtResource("3_i70x3")

[node name="buyCollision" type="CollisionShape2D" parent="InteractableBuy"]
shape = SubResource("CircleShape2D_p2jja")
debug_color = Color(0, 0.635294, 0.396078, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BuyMenu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BuyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.345098)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/BuyMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BuyMenu/CenterContainer"]
layout_mode = 2

[node name="BuyLabel" type="Label" parent="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Wil je het volgende level kopen?"

[node name="CostLabel" type="Label" parent="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dat kost je: 10 gems!"

[node name="answers" type="HBoxContainer" parent="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Yes" type="Button" parent="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer/answers"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Ja"

[node name="No" type="Button" parent="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer/answers"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nee"

[connection signal="pressed" from="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer/answers/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer/BuyMenu/CenterContainer/VBoxContainer/answers/No" to="." method="_on_no_pressed"]
